--- a/tareSim/TareSim.vcxproj.filters
+++ b/tareSim/TareSim.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\WString.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\accumulationMgr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\calibration.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\win32shims.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\accumulationMgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
